# docqa_bench

./: .replit  LICENSE  README.md  example.py  example_output.json  pyproject.toml  test.json
.github/workflows/: main.yml  pr_agent.yml
docqa_bench/: __init__.py  benchmark.py
docqa_bench/chunkers/: simple_chunker.py
docqa_bench/cli/: main.py
docqa_bench/core/: answer_generator.py  chunker.py  document.py  embedder.py  evaluator.py  question_generator.py  vector_store.py
docqa_bench/document_types/: pdf_document.py
docqa_bench/embedders/: openai_embedder.py
docqa_bench/metrics/: f1_score.py
docqa_bench/models/: openai_model.py
docqa_bench/vector_stores/: chroma_store.py
tests/: benchmark_test.py
