[tool.poetry]
name = "docqa-bench"
version = "0.1.1"
description = "A library for benchmarking document QA systems"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoshuaOliphant/docqa_bench"
packages = [{include = "docqa_bench"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
chromadb = "^0.3.0"
pypdf = "^3.0.0"
langchain = "^0.0.150"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.18.0"
black = "^22.3"
isort = "^5.10"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
