[tool.poetry]
name = "docqa-bench"
version = "0.1.6"
description = "A library for benchmarking document QA systems"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoshuaOliphant/docqa_bench"
packages = [{include = "docqa_bench"}]

[tool.poetry.dependencies]
python = "^3.10.1"
openai = "1.35.10"
chromadb = "^0.5.3"
langchain = "^0.2.6"
scikit-learn = "^1.0.2"
aiofiles = "^24.1.0"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.18.0"
black = "^22.3"
isort = "^5.10"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
