[tool.poetry]
name = "docqa-bench"
version = "0.1.12"
description = "A library for benchmarking document QA systems"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoshuaOliphant/docqa_bench"
packages = [{include = "docqa_bench"}]

[tool.poetry.dependencies]
python = "^3.10.1"
openai = "1.35.10"
chromadb = "^0.5.3"
langchain = "^0.2.6"
scikit-learn = "^1.0.2"
aiofiles = "^24.1.0"
pydantic = "^2.8.2"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
protobuf = ">=3.19,<5.0"
flake8 = "^7.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.10"
mypy = "^0.950"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
